unpackaged/main/default/objects/Account/fields/CI_Demo__c.field-meta.xml
<CustomField>
    <fullName>CI_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CI Demo</label>
    <type>Checkbox</type>
</CustomField>