unpackaged/main/default/objects/Account/fields/Liam_s_demo_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Liam_s_demo_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liam's demo checkbox</label>
    <type>Checkbox</type>
</CustomField>